# devlog

./: .gitignore  LICENSE  README.md  pyproject.toml
devlog/: __main__.py  cli.py  formatter.py  storage.py
