[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog-cli"
version = "0.1.0"
description = "Daily developer log and standup generator — stop wondering what you did yesterday"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "DaddyYarik", email = "avrov109@gmail.com" }]
requires-python = ">=3.8"
keywords = ["cli", "developer", "productivity", "standup", "log", "journal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
devlog = "devlog.cli:cli"

[project.urls]
Homepage = "https://github.com/DaddyYarik/devlog"
Repository = "https://github.com/DaddyYarik/devlog"
"Bug Tracker" = "https://github.com/DaddyYarik/devlog/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["devlog*"]
